<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>io.openshift</groupId>
	<artifactId>dashboard</artifactId>
	<version>0.1.1</version>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!-- version>${spring.version}</version -->
		<!-- version>1.5.14.RELEASE</version -->
		<!-- version>2.2.6.RELEASE</version -->
		<version>2.3.3.RELEASE</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <gson.version>2.8.5</gson.version>
        <lombok.version>1.18.2</lombok.version> <!--  1.16.20 -->
        <guava.version>29.0-jre</guava.version>
        <modelmapper.version>2.3.8</modelmapper.version>
        <spring-boot-starter.version>1.5.14.RELEASE</spring-boot-starter.version>
	    <git-commit-id-plugin.version>4.0.2</git-commit-id-plugin.version>

		<!-- Testing -->        
        <junit.platform.version>1.6.2</junit.platform.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
        <junit-jupiter-engine.version>5.6.2</junit-jupiter-engine.version>
        <rest-assured.version>4.3.1</rest-assured.version>
    	<pitest.version>1.5.1</pitest.version>
        
    </properties>

    <dependencies>
   		<!-- REST API -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
				
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <!-- version>4.5.8 (4.5.5)</version -->
        </dependency>
        <!--dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency-->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <!-- version>3.8.0 (2.6.0)</version -->
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>${modelmapper.version}</version>
        </dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<!-- spring security test -->
	
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<!-- version>4.3.0</version -->
			<!-- version>${rest-assured.version}</version -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>spring-mock-mvc</artifactId>
			<!-- version>4.3.0</version -->
			<!-- version>${rest-assured.version}</version -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>spring-web-test-client</artifactId>
			<!-- version>4.3.0</version -->
			<!--  version>${rest-assured.version}</version -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-jaxb-annotations</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.pitest</groupId>
			<artifactId>pitest-parent</artifactId>
			<version>${pitest.version}</version>
			<type>pom</type>
		</dependency>
    </dependencies>

    <build>
        <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!-- configuration>
					<addResources>true</addResources>
				</configuration -->
			</plugin>

			<plugin>
			    <groupId>pl.project13.maven</groupId>
			    <artifactId>git-commit-id-plugin</artifactId>
			    <version>${git-commit-id-plugin.version}</version>
			</plugin>				
						
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<!-- version>${maven-surefire-plugin.version}</version -->
				<configuration>
					<failIfNoTests>true</failIfNoTests>
					<!--  forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<trimStackTrace>false</trimStackTrace>
 					<argLine>-Xmx1024m -XX:MaxPermSize=256m -XX:-UseLoopPredicate</argLine -->
					<!-- groups>acceptance | !feature-a</groups> <excludedGroups>integration, 
						regression</excludedGroups -->
				</configuration>
			    <!-- dependencies>
			        <dependency>
			            <groupId>org.junit.platform</groupId>
			            <artifactId>junit-platform-surefire-provider</artifactId>
			            <version>${junit-platform-surefire-provider.version}</version>
			        </dependency>
	                <dependency>
			            <groupId>org.junit.jupiter</groupId>
			            <artifactId>junit-jupiter-engine</artifactId>
			            <version>${junit-jupiter-engine.version}</version>
			        </dependency>
			    </dependencies -->
			</plugin>
			
			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>${pitest.version}</version>
				<configuration>
					<targetClasses>
						<param>io.openshift.model.domain.*</param>
						<!-- param>io.openshift.model.mapper.*</param -->
						<param>io.openshift.controller.rest.*</param>
						<param>io.openshift.service.*</param>
					</targetClasses>
					<targetTests>
						<!-- param>io.openshift.model.mapper.*</param -->
						<param>io.openshift.service.*</param>
					</targetTests>
					<excludedTestClasses>*IT</excludedTestClasses>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-junit5-plugin</artifactId>
						<version>0.12</version>
					</dependency>
				</dependencies>
			</plugin>
			
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		
			 <!-- plugin>
			    <groupId>org.projectlombok</groupId>
			    <artifactId>lombok-maven-plugin</artifactId>
			    <version>${lombok.version}</version>
			</plugin -->	
		</plugins>
    </build>

</project>
